--- a/.github/workflows/deploy1.yml
+++ b/.github/workflows/deploy1.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     
     steps:
@@ -59,20 +59,7 @@ jobs:
 </body>
 </html>
 EOF
-    
-    - name: Prepare files for S3
-      run: |
-        mkdir -p dist
-        cp index.html dist/
-        echo "✅ Files ready for S3 deployment"
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+        echo "✅ HTML file created"
     
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
@@ -83,16 +70,13 @@ EOF
     
     - name: Create S3 bucket if not exists
       run: |
-        if aws s3api head-bucket --bucket my-app-static-website 2>/dev/null; then
-          echo "Bucket exists"
+        if ! aws s3api head-bucket --bucket my-app-static-website 2>/dev/null; then
+          echo "Creating bucket..."
+          aws s3api create-bucket \
+            --bucket my-app-static-website \
+            --region us-east-1
         else
-          aws s3api create-bucket \
-            --bucket my-app-static-website \
-            --region us-east-1 || \
-          aws s3api create-bucket \
-            --bucket my-app-static-website \
-            --region us-east-1 \
-            --create-bucket-configuration LocationConstraint=us-east-1
+          echo "Bucket already exists"
         fi
     
     - name: Enable static website hosting
@@ -121,52 +105,8 @@ EOF
     
     - name: Upload files to S3
       run: |
-        cat > index.html << 'EOF'
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Flask App - Deployed to S3</title>
-    <style>
-        body { 
-            font-family: Arial, sans-serif; 
-            text-align: center; 
-            padding: 50px; 
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            min-height: 100vh;
-            margin: 0;
-        }
-        .container {
-            background: rgba(255,255,255,0.1);
-            padding: 40px;
-            border-radius: 10px;
-            max-width: 600px;
-            margin: 0 auto;
-        }
-        h1 { color: #fff; margin-bottom: 30px; }
-        .endpoint { 
-            margin: 20px 0; 
-            padding: 20px; 
-            background: rgba(255,255,255,0.2); 
-            border-radius: 5px; 
-        }
-        .status { color: #4ade80; font-weight: bold; }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>🚀 Hello from my Deployment Agent!</h1>
-        <div class="endpoint">
-            <h2>Health Check</h2>
-            <p><span class="status">Status:</span> healthy</p>
-            <p><span class="status">Message:</span> Deployment agent test app</p>
-        </div>
-        <p><em>Successfully deployed to AWS S3!</em></p>
-    </div>
-</body>
-</html>
-EOF
         aws s3 cp index.html s3://my-app-static-website/index.html \
           --content-type "text/html" \
           --acl public-read
         echo "✅ Deployment complete!"
+        echo "🌐 Website URL: http://my-app-static-website.s3-website-us-east-1.amazonaws.com"
