changed parsing errors in yaml

--- a/.github/workflows/deploy1.yml
+++ b/.github/workflows/deploy1.yml
@@ -14,51 +14,30 @@ jobs:
     
     - name: Create static HTML version
       run: |
-        cat > index.html << 'EOF'
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Flask App - Deployed to S3</title>
-    <style>
-        body { 
-            font-family: Arial, sans-serif; 
-            text-align: center; 
-            padding: 50px; 
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            min-height: 100vh;
-            margin: 0;
-        }
-        .container {
-            background: rgba(255,255,255,0.1);
-            padding: 40px;
-            border-radius: 10px;
-            max-width: 600px;
-            margin: 0 auto;
-        }
-        h1 { color: #fff; margin-bottom: 30px; }
-        .endpoint { 
-            margin: 20px 0; 
-            padding: 20px; 
-            background: rgba(255,255,255,0.2); 
-            border-radius: 5px; 
-        }
-        .status { color: #4ade80; font-weight: bold; }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>🚀 Hello from my Deployment Agent!</h1>
-        <div class="endpoint">
-            <h2>Health Check</h2>
-            <p><span class="status">Status:</span> healthy</p>
-            <p><span class="status">Message:</span> Deployment agent test app</p>
-        </div>
-        <p><em>Successfully deployed to AWS S3!</em></p>
-    </div>
-</body>
-</html>
-EOF
+        echo '<!DOCTYPE html>' > index.html
+        echo '<html>' >> index.html
+        echo '<head>' >> index.html
+        echo '    <title>Flask App - Deployed to S3</title>' >> index.html
+        echo '    <style>' >> index.html
+        echo '        body { font-family: Arial; text-align: center; padding: 50px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; min-height: 100vh; margin: 0; }' >> index.html
+        echo '        .container { background: rgba(255,255,255,0.1); padding: 40px; border-radius: 10px; max-width: 600px; margin: 0 auto; }' >> index.html
+        echo '        h1 { color: #fff; margin-bottom: 30px; }' >> index.html
+        echo '        .endpoint { margin: 20px 0; padding: 20px; background: rgba(255,255,255,0.2); border-radius: 5px; }' >> index.html
+        echo '        .status { color: #4ade80; font-weight: bold; }' >> index.html
+        echo '    </style>' >> index.html
+        echo '</head>' >> index.html
+        echo '<body>' >> index.html
+        echo '    <div class="container">' >> index.html
+        echo '        <h1>🚀 Hello from my Deployment Agent!</h1>' >> index.html
+        echo '        <div class="endpoint">' >> index.html
+        echo '            <h2>Health Check</h2>' >> index.html
+        echo '            <p><span class="status">Status:</span> healthy</p>' >> index.html
+        echo '            <p><span class="status">Message:</span> Deployment agent test app</p>' >> index.html
+        echo '        </div>' >> index.html
+        echo '        <p><em>Successfully deployed to AWS S3!</em></p>' >> index.html
+        echo '    </div>' >> index.html
+        echo '</body>' >> index.html
+        echo '</html>' >> index.html
         echo "✅ HTML file created"
     
     - name: Configure AWS credentials
@@ -72,41 +51,22 @@ EOF
       run: |
         if ! aws s3api head-bucket --bucket my-app-static-website 2>/dev/null; then
           echo "Creating bucket..."
-          aws s3api create-bucket \
-            --bucket my-app-static-website \
-            --region us-east-1
+          aws s3api create-bucket --bucket my-app-static-website --region us-east-1 || aws s3 mb s3://my-app-static-website
         else
           echo "Bucket already exists"
         fi
     
     - name: Enable static website hosting
       run: |
-        aws s3 website s3://my-app-static-website \
-          --index-document index.html \
-          --error-document index.html
+        aws s3 website s3://my-app-static-website --index-document index.html --error-document index.html
     
     - name: Set bucket policy for public read
       run: |
-        cat > bucket-policy.json << 'EOF'
-{
-  "Version": "2012-10-17",
-  "Statement": [
-    {
-      "Sid": "PublicReadGetObject",
-      "Effect": "Allow",
-      "Principal": "*",
-      "Action": "s3:GetObject",
-      "Resource": "arn:aws:s3:::my-app-static-website/*"
-    }
-  ]
-}
-EOF
+        echo '{"Version":"2012-10-17","Statement":[{"Sid":"PublicReadGetObject","Effect":"Allow","Principal":"*","Action":"s3:GetObject","Resource":"arn:aws:s3:::my-app-static-website/*"}]}' > bucket-policy.json
         aws s3api put-bucket-policy --bucket my-app-static-website --policy file://bucket-policy.json
     
     - name: Upload files to S3
       run: |
-        aws s3 cp index.html s3://my-app-static-website/index.html \
-          --content-type "text/html" \
-          --acl public-read
+        aws s3 cp index.html s3://my-app-static-website/index.html --content-type "text/html" --acl public-read
         echo "✅ Deployment complete!"
         echo "🌐 Website URL: http://my-app-static-website.s3-website-us-east-1.amazonaws.com"
