Add CI/CD pipeline generated by deployment agent

--- a/.github/workflows/deploy1.yml
+++ b/.github/workflows/deploy1.yml
@@ -4,9 +4,6 @@ on:
   push:
     branches: [ main ]
 
-env:
-  BUCKET_NAME: my-static-site-${{ github.run_number }}-${{ github.sha }}
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,27 +11,25 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    
+      
     - name: Create dist directory
       run: mkdir -p dist
-    
-    - name: Generate static HTML
+      
+    - name: Create static HTML version
       run: |
         echo '<!DOCTYPE html>' > dist/index.html
         echo '<html lang="en">' >> dist/index.html
         echo '<head>' >> dist/index.html
         echo '    <meta charset="UTF-8">' >> dist/index.html
         echo '    <meta name="viewport" content="width=device-width, initial-scale=1.0">' >> dist/index.html
-        echo '    <title>My Static Site</title>' >> dist/index.html
+        echo '    <title>Flask Static Site</title>' >> dist/index.html
         echo '</head>' >> dist/index.html
         echo '<body>' >> dist/index.html
-        echo '    <h1>Welcome to My Static Website</h1>' >> dist/index.html
-        echo '    <p>This site was deployed using GitHub Actions to AWS S3.</p>' >> dist/index.html
-        echo '    <p>Build Number: ${{ github.run_number }}</p>' >> dist/index.html
-        echo '    <p>Commit SHA: ${{ github.sha }}</p>' >> dist/index.html
+        echo '    <h1>Welcome to Flask Static Site</h1>' >> dist/index.html
+        echo '    <p>This is a static version of the Flask application.</p>' >> dist/index.html
         echo '</body>' >> dist/index.html
         echo '</html>' >> dist/index.html
-    
+        
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
@@ -42,35 +37,37 @@ jobs:
         path: dist/
 
   deploy:
-    needs: build
     runs-on: ubuntu-latest
+    needs: build
+    env:
+      BUCKET_NAME: unique-bucket-name-${{ github.run_number }}-${{ github.sha }}
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    
+      
     - name: Download artifact
       uses: actions/download-artifact@v4
       with:
         name: static-site
         path: dist/
-    
+        
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
-    
-    - name: Create S3 bucket
+        
+    - name: Create S3 bucket if not exists
       run: |
         aws s3 mb s3://$BUCKET_NAME --region us-east-1 || echo "Bucket may already exist"
-    
+        
     - name: Enable static website hosting
       run: |
         aws s3 website s3://$BUCKET_NAME --index-document index.html --error-document index.html
-    
-    - name: Create bucket policy
+        
+    - name: Create bucket policy JSON file
       run: |
         echo '{' > bucket-policy.json
         echo '  "Version": "2012-10-17",' >> bucket-policy.json
@@ -80,17 +77,19 @@ jobs:
         echo '      "Effect": "Allow",' >> bucket-policy.json
         echo '      "Principal": "*",' >> bucket-policy.json
         echo '      "Action": "s3:GetObject",' >> bucket-policy.json
-        echo '      "Resource": "arn:aws:s3:::'"$BUCKET_NAME"'/*"' >> bucket-policy.json
+        echo '      "Resource": "arn:aws:s3:::'$BUCKET_NAME'/*"' >> bucket-policy.json
         echo '    }' >> bucket-policy.json
         echo '  ]' >> bucket-policy.json
         echo '}' >> bucket-policy.json
-    
+        
     - name: Apply bucket policy
       run: |
         aws s3api put-bucket-policy --bucket $BUCKET_NAME --policy file://bucket-policy.json
-    
+        
     - name: Upload files to S3
       run: |
         aws s3 cp dist/index.html s3://$BUCKET_NAME/index.html --content-type "text/html"
-    
-    - name: Output
+        
+    - name: Output website URL
+      run: |
+        echo "Website URL: http://$BUCKET_NAME.s3-website-us-east-1.amazonaws.com"
