--- a/.github/workflows/deploy1.yml
+++ b/.github/workflows/deploy1.yml
@@ -1,4 +1,4 @@
-name: Deploy to AWS S3 Static Website
+name: Deploy to S3 Static Website
 
 on:
   push:
@@ -61,11 +61,15 @@ jobs:
         
     - name: Create S3 bucket if not exists
       run: |
-        aws s3 mb s3://$BUCKET_NAME --region us-east-1 || echo "Bucket may already exist"
+        aws s3api create-bucket --bucket $BUCKET_NAME --region us-east-1 || echo "Bucket may already exist"
+        
+    - name: Disable S3 block public access
+      run: |
+        aws s3api put-public-access-block --bucket $BUCKET_NAME --public-access-block-configuration "BlockPublicAcls=false,IgnorePublicAcls=false,BlockPublicPolicy=false,RestrictPublicBuckets=false"
         
     - name: Enable static website hosting
       run: |
-        aws s3 website s3://$BUCKET_NAME --index-document index.html --error-document index.html
+        aws s3api put-bucket-website --bucket $BUCKET_NAME --website-configuration IndexDocument='{Suffix=index.html}',ErrorDocument='{Key=index.html}'
         
     - name: Create bucket policy JSON file
       run: |
@@ -86,10 +90,4 @@ jobs:
       run: |
         aws s3api put-bucket-policy --bucket $BUCKET_NAME --policy file://bucket-policy.json
         
-    - name: Upload files to S3
-      run: |
-        aws s3 cp dist/index.html s3://$BUCKET_NAME/index.html --content-type "text/html"
-        
-    - name: Output website URL
-      run: |
-        echo "Website URL: http://$BUCKET_NAME.s3-website-us-east-1.amazonaws.com"
+    - name
